# advent-of-code

./: .gitignore  Cargo.toml  README.md
2022/: Cargo.toml
2022/day12/: Cargo.toml
2022/day12/src/: main.rs
2022/day8/: Cargo.toml
utils/: Cargo.toml
utils/src/: cli.rs  config.rs  data.rs  lib.rs
v23/: Cargo.toml
v23/src/: day1.rs  main.rs
