[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
dotenvy = "0.15.7"
clap = { workspace = true, features = ["env", "derive"] }
ureq = "2.9.1"
serde = {version="1.0.188", features = ["derive"]}